# CrabbyBird

./: .gitignore  Cargo.toml  README.md  project.godot  rust_library.tres
assets/: background-day.png.import  pipe-green.png.import  scorefont.tres
assets/crabby/: crabby_down.png.import  crabby_mid.png.import  crabby_middle.png.import  crabby_up.png.import
assets/crabby2/: Warstwa.png.import  Wklejona warstwa #2.png.import  Wklejona warstwa.png.import  crabby-mid.png.import  crabby-up.png.import  crabby_down.png.import  crabby_up.png.import  craby_mid.png.import  rustacean-flat-happy.png.import
assets/crabbyfly/: 1.png.import  2.png.import  3.png.import  4.png.import
assets/crabbygameover/: 1.png.import  2.png.import  3.png.import
assets/puff/: puff1.png.import  puff2.png.import  puff3.png.import  puff4.png.import
scenes/: Background.tscn  Base.gdns  Base.tscn  BaseManager.gdns  BaseManager.tscn  BaseSpawner.gdns  BaseSpawner.tscn  Game.gdns  Game.tscn  GameScene.gdns  GameState.tscn  Main.gdns  Main.tscn  Pipe.gdns  Pipe.tscn  PipeManager.gdns  PipeManager.tscn  Player.gdns  Player.tscn  World.gdns  World.tscn
src/: base.rs  base_manager.rs  base_menager.rs  game.rs  game_state.rs  lib.rs  pipe.rs  pipe_manager.rs  player.rs  tmp.rs  world.rs
