[package]
name = "crabby_bird"
version = "0.1.0"
authors = ["Edyta Pawlak <edyta.pawlakk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdnative = "0.8"
nalgebra = "0.21.0"

[lib]
crate-type = ["cdylib"]