[package]
name = "crabby_bird"
version = "0.1.0"
authors = ["Edyta Pawlak <edyta.pawlakk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdnative = "0.9.1"
euclid = "0.22.1"

[lib]
crate-type = ["cdylib"]